add Test::PostgreSQL to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ perl:
 env:
   - TEST_DBIC=1
 install:
-  - cpanm --quiet --notest Test::DBIx::Class DBD::Pg Test::postgresql DBD::mysql Test::mysqld DateTime::Format::Pg Test::Roo
+  - cpanm --quiet --notest Test::DBIx::Class DBD::Pg Test::postgresql Test::PostgreSQL DBD::mysql Test::mysqld DateTime::Format::Pg Test::Roo
   - cpanm --quiet --installdeps --notest .
