make travis install old Test::PostgreSQL
Newer releases need Perl >= 5.14 :(

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ perl:
   - "5.12"
   - "5.10"
 install:
-  - cpanm --quiet --notest DBD::Pg Test::PostgreSQL DBD::mysql Test::mysqld DateTime::Format::Pg Test::CheckManifest Pod::POM Lingua::EN::Inflect String::CamelCase
+  - cpanm --quiet --notest DBD::Pg Test::PostgreSQL@1.06 DBD::mysql Test::mysqld DateTime::Format::Pg Test::CheckManifest Pod::POM Lingua::EN::Inflect String::CamelCase
   - cpanm --quiet --installdeps --notest .
