--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
-env: RELEASE_TESTING=1
+env:
+  - RELEASE_TESTING=1
+  - TRAVIS_PERL_DEBUG=1
 language: perl
 perl:
   - "5.24"
@@ -21,3 +23,5 @@ install:
   - cpanm --quiet --notest DBD::Pg Test::PostgreSQL@1.06 DBD::mysql Test::mysqld DateTime::Format::Pg Test::CheckManifest Pod::POM Lingua::EN::Inflect String::CamelCase
   - cpanm --quiet --installdeps --notest .
   - cpan-install --coverage
+script:
+  - prove -l $(test-files)
